--- a/FP2.vcxproj.filters
+++ b/FP2.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="doubler.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
+    <ClInclude Include="debug.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
